# treehouse

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: Overview.md  USER_MANUAL.md  web.md
docs/plans/: 2026-04-24-treehouse-design.md  2026-04-24-treehouse-implementation.md  2026-04-24-treehouse-usecases.md  2026-04-25-landing-site.md
site/: .gitignore  README.md  package-lock.json  package.json  tailwind.config.ts
site/app/: apple-icon.tsx  globals.css  icon.tsx  layout.tsx  not-found.tsx  opengraph-image.tsx  page.tsx  robots.ts  site-url.ts  sitemap.ts
site/app/components/: DotField.tsx  InstallButton.tsx
tests/: test_agent.py  test_agent_image.py  test_api.py  test_commit_workspace.py  test_config.py  test_docker.py  test_env.py  test_integration.py  test_merger.py  test_models.py  test_orchestrate_merge.py  test_ports.py  test_state.py  test_worktree.py
treehouse/: cli.py  config.py
treehouse/core/: agent.py  agent_image.py  docker.py  env.py  merger.py  models.py  ports.py  worktree.py
treehouse/server/: api.py  state.py
treehouse/tui/: agent_output.py  agent_table.py  app.py  dialogs.py  log_viewer.py
web/: package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/components/: AgentTable.tsx  BranchGlyph.tsx  DetailPanel.tsx  ForestLegend.tsx  ForestTimeline.tsx  LeafIcon.tsx  MergeModal.tsx  SpawnModal.tsx  StatusPill.tsx  ThemeToggle.tsx  TopBar.tsx
web/lib/: mockData.ts
