[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "treehouse"
version = "0.1.0"
description = "Parallel runtime isolation for multi-agent coding"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.9",
    "textual>=0.50",
    "pyyaml>=6.0",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "websockets>=12.0",
]

[project.scripts]
treehouse = "treehouse.cli:app"
